--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -224,8 +224,7 @@
                     <div class="member-name">Виктория Киреева</div>
                     <div class="member-username">@Wiki_cc</div>
                     <div class="member-description">
-                        Начала заниматься программированием с 7 класса в IT-Lab. Писала исследовательские работы в сфере математики и программирования. Занималась frontend-разработкой и адаптивной версткой. Создала страницы "О нас" и "Рейтинг", реализовала интерактивные элементы
-                        интерфейса.
+                        Студентка 1 курса УрФУ. Писала исследовательские работы в сфере математики и программирования. Занималась frontend-разработкой и адаптивной версткой. Создала страницы "О нас" и "Рейтинг", реализовала интерактивные элементы интерфейса.
                     </div>
                     <div class="member-contacts">
                         <a href="https://t.me/Wiki_cc" class="contact-badge tg" target="_blank" title="Telegram">
@@ -267,7 +266,7 @@
     </main>
 
     <footer class="footer">
-        <span>ЮНИТ.УРФУ</span>
+        <a href="https://vk.com/unit.usue?from=groups"><span>ЮНИТ.УРФУ</span></a>
     </footer>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
