--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -190,7 +190,7 @@
     </main>
 
     <footer class="footer">
-        <span>ЮНИТ.УРФУ</span>
+        <a href="https://vk.com/unit.usue?from=groups"><span>ЮНИТ.УРФУ</span></a>
     </footer>
 
     <!-- Overlay и модальные окна -->
