--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -46,7 +46,7 @@
     </div>
 
     <footer class="footer">
-        <span>ЮНИТ.УРФУ</span>
+        <a href="https://vk.com/unit.usue?from=groups"><span>ЮНИТ.УРФУ</span></a>
     </footer>
 </body>
 
