Попытка интегрировать PWA

--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#212121">
     <title>RatingHabits</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
@@ -192,7 +193,7 @@
                     </div>
                     <div class="member-role">UI/UX Дизайнер</div>
                     <div class="member-name">Алиса Трапп</div>
-                    <div class="member-username">@FiJuShh</div>
+                    <div class="member-username">@FiKuShh</div>
                     <div class="member-description">
                         Студентка УрФУ, участник некоммерческой IT-организации "Юнит". Разработала визуальную концепцию и дизайн всех страниц приложения. Создала современный и интуитивно понятный интерфейс в темной цветовой гамме. Владею Figma, Adobe Illustrator, After Effects,
                         Blender 3D.
@@ -269,6 +270,7 @@
         <a href="https://vk.com/unit.usue?from=groups"><span>ЮНИТ.УРФУ</span></a>
     </footer>
 
+    <script src="{{ url_for('static', filename='js/pwa/app.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 
