--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -18,6 +18,11 @@ body {
     min-height: 100vh;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .new_back {
     background: url('../images/back2.png'), linear-gradient(150deg, #2b2b2b, #1a1a1a, #313131, #313131);
     background-repeat: repeat;
