--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#212121">
     <title>RatingHabits</title>
+
+    <link rel="manifest" href="manifest.json">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
     <link rel="icon" href="../static/images/logo.png" type="image/x-icon">
@@ -436,6 +440,7 @@
         </div>
     </div>
 
+    <script src="{{ url_for('static', filename='js/pwa/app.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 
